--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "angular": "^1.5.0",
     "angular-mocks": "^1.3.15",
     "angular-ui-router": "^0.2.13",
-    "babel-core": "^6.3.26",
+    "babel": "^6.5.2",
+    "babel-core": "^6.10.4",
     "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.5.2",
+    "babel-register": "^6.9.0",
     "babelify": "^7.2.0",
     "brfs": "^1.2.0",
     "browser-sync": "^2.7.6",
